--- a/index.html
+++ b/index.html
@@ -6,13 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/index.css" />
     <title>Document</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-NQYEVYQ60T"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-NQYEVYQ60T");
+    </script>
   </head>
   <body>
     <section class="student">
       <h1>KDA - 2021: Class B</h1>
-      <hr>
+      <hr />
       <div class="student-container"></div>
-      <hr>
+      <hr />
     </section>
     <script src="scripts/index.js"></script>
     <footer>&copy;2021 - Marcos Musafiri</footer>
